change colors and report's header

--- a/chat.html
+++ b/chat.html
@@ -80,14 +80,14 @@
 
     <div class="container">
         <div class="mt-4">
-            <nav class="navbar navbar-expand-sm navbar-light bg-faded" style="background-color: #18bc9cbd">
+            <nav class="navbar navbar-expand-sm navbar-light bg-faded" style="background-color: powderblue">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="col-9">
-                        <div class="navbar-nav ro">
+                        <div class="navbar-nav row">
                             <a class="nav-item nav-link active" href="#">Inbox
                                 <span class="sr-only">(current)</span>
                             </a>
@@ -143,7 +143,7 @@
 
     <!-- messages -->
     <div class="container">
-        <table class="table  table-hover">
+        <table class="table mt-2  table-hover">
             <thead class="thead-inverse " style="color:#18bc9c; background-color:#464242">
                 <tr>
                     <th scope="col"></th>
