--- a/message.html
+++ b/message.html
@@ -16,7 +16,8 @@
     <!-- bootswatch flatly theme -->
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
     <!-- links -->
-     <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/message.css">
+    <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     </head>
@@ -58,7 +59,7 @@
             
         <div class="container-fluid">
             <div class="mt-2">
-                <nav class="navbar navbar-expand-sm navbar-light bg-faded" style="background-color: #18bc9cd1">
+                <nav class="navbar navbar-expand-sm navbar-light bg-faded" style="background-color: powderblue">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
