--- a/report.html
+++ b/report.html
@@ -25,13 +25,14 @@
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
             <!-- logo -->
-            <a href="#" class="navbar-brand">BidBay</a>
+            <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
             <!-- search bar -->
-            <form class="px-2" id="search-bar">
+            <form action="../search.html" method="get" class="" id="search-bar">
                 <div class="d-flex">
-                    <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                    <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
+                           id="search-input">
                     <select class="form-control rounded-1 col-2 " id="search-categories">
-                        <option selected> All Categories </option>
+                        <option selected> All Categories</option>
                         <option>Technology</option>
                         <option>Automobiles</option>
                         <option>Clothes</option>
@@ -39,22 +40,32 @@
                     <button class="btn btn-dark rounded-1 " type="submit"><i class="fas fa-search"></i></button>
                 </div>
             </form>
-            <!-- mobile authentication button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <!-- authentication links -->
-            <div class="navbar-collapse collapse justify-content-end" id="authentication">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-right" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-right" href="#">Register</a>
-                    </li>
-                </ul>
-            </div>  
+            <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
+                <i class="far fa-envelope fa-stack-2x"></i>
+                <!-- place numbers of messages here -->
+                <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
+                    27
+                </strong>
+            </a>
+            <div class="dropdown" id="authentication">
+                <a class="dropdown-toggle nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
+                    <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
+                    Administrator
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
+                     role="menu">
+                    <a class="dropdown-item" href="../sell_page.html">New Auction</a>
+                    <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
+                    <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
+                            class="got-messages">27</strong>
+                    </a>
+                    <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
+                </div>
+            </div>
         </nav>
+        
 
         <div class="container">
 
