--- a/profile/adminProfile_asAdmin.html
+++ b/profile/adminProfile_asAdmin.html
@@ -25,7 +25,7 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="../home/landing_page_user.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
     <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
@@ -45,7 +45,7 @@
         <i class="far fa-envelope fa-stack-2x"></i>
         <!-- place numbers of messages here -->
         <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
-            27
+            12
         </strong>
     </a>
     <div class="dropdown" id="authentication">
@@ -56,7 +56,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
              role="menu">
-            <a class="dropdown-item" href="../sell_page.html">New Auction</a>
+            <a class="dropdown-item" href="../report.html">Reports</a>
             <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
             <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
                     class="got-messages">27</strong>
