--- a/profile/profile_asAdmin.html
+++ b/profile/profile_asAdmin.html
@@ -25,35 +25,43 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="../home/landing_page_user.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
     <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
-            <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
-            <option selected> All Categories </option>
-            <option>Technology</option>
-            <option>Automobiles</option>
-            <option>Clothes</option>
-        </select>
+            <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
+                   id="search-input">
+            <select class="form-control rounded-1 col-2 " id="search-categories">
+                <option selected> All Categories</option>
+                <option>Technology</option>
+                <option>Automobiles</option>
+                <option>Clothes</option>
+            </select>
             <button class="btn btn-dark rounded-1 " type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
     <!-- authentication links -->
-    <a class="fa-stack fa-3x" id="mail-icon" href="#">
+    <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
         <i class="far fa-envelope fa-stack-2x"></i>
-        <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">27</strong>
+        <!-- place numbers of messages here -->
+        <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
+            12
+        </strong>
     </a>
     <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+           aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
             Administrator
         </a>
-        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="profile_asUser.html">Profile</a>
-            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
+        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
+             role="menu">
+            <a class="dropdown-item" href="../report.html">Reports</a>
+            <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
+                    class="got-messages">27</strong>
             </a>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
         </div>
     </div>
 </nav>
